add(html): light and dark choices but the fields.json still needs to be updated

--- a/two-column-feature.module/two-column-feature.module/module.css
+++ b/two-column-feature.module/two-column-feature.module/module.css
@@ -13,3 +13,14 @@
 img {
   max-width: 100%;
 }
+
+
+.dark {
+  background: black;
+  color: white;
+}
+
+.light {
+  background: white;
+  color: black;
+}
